# mini-stochastic-interpolants

./: .gitignore  README.md  imports.py  interpolate.py  powerpoint.py  pyproject.toml  requirements.txt  setup.sh  test.py  test2D.py  test2D_names.py  write-word.py
demos/: gaussian_mixture_1d.py  gaussian_mixture_2d.py  test.py  test2D.py  test2D_names.py  transform_name_samples.py
src/stochint/: _version.py  losses.py  stochint.py  util_data.py  util_plot.py  util_simulate.py  util_train.py
test/: write-word.py
