[build-system]
requires = ["setuptools"]  # REQUIRED if [build-system] table is used
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.


[project]
name = "stochint"
dynamic = ["version"]
dependencies = ["optax", "flax", "matplotlib", "tqdm", "imageio"]